# template_opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run
cmake/: Libraries.cmake  Settings.cmake
src/: gl_utils.cpp  main.cpp
src/headers/: gl_utils.hpp
src/headers/pch/: glad_pch.hpp  glfw_pch.hpp
src/shaders/: frag.glsl  vertex.glsl
